<resources>
    <string name="app_name">MCA</string>
    <string name="send">SEND</string>
    <string name="email_of_user">EMAIL OF USER</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="description_for_your_image">Description for your image</string>
    <string name="textview2">TextView</string>
    <string name="sendAS">SEND</string>
    <string name="adress_must_have">address must have @</string>
    <string name="add_friends_using_their_email_adress">Add friends using their email address {@}</string>
    <string name="add_friends_using_their_email_address" />
    <string name="address_must_have" />
    <string name="addres_should_contain">address should contain @</string>
    <string name="address_should_contain">address_should_contain</string>
    <string name="add_friends_using_their_email_addressADF">add_friends_using_their_email_address</string>
    <string name="examplefriend_gmail_com">exampleFriend@gmail.com</string>
    <string name="friends">FRIENDS</string>
    <string name="requests">Requests</string>
    <string name="click_here_to_signup">Click here to signup!</string>
    <string name="amma">Γamma</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="have_an_account_login_here">Have an account?, login here!</string>
    <string name="go_to_login">GO TO LOGIN</string>
    <string name="account_registered_with_success_login_to_activate_account">Account registered with success, login to activate account.</string>
    <string name="code">Code</string>
    <string name="verification_code_sent_to_your_email_enter_the_code_here">Verification code sent to your email, enter the code here:</string>
    <string name="s">S</string>
    <string name="requestsB">Requests</string>
    <string name="black_list">Black List</string>
    <string name="logs">Logs</string>
    <string name="only_for_test">ONLY FOR TEST</string>
    <string name="image_for_test_only">IMAGE FOR TEST ONLY</string>
    <string name="user_icon">user_icon</string>
    <string name="requestsP">Requests</string>
    <string name="enter_your_friend_s_email_below_and_press_send">Enter your friend\'s email below and press send</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="to_send_a_request_enter_friend_s_email_here">To send a request enter friend\'s email here</string>
    <string name="sendLowerCaps">Send</string>
    <string name="accept_friend_request">Accept friend request?</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="message">Message</string>
    <string name="imagebutton">imageButton</string>
    <string name="remove_from_friend_s">Remove from friend\'s?</string>
    <string name="block_all_incoming_messages">Block all incoming Messages</string>
    <string name="turn_off_all_notifications">Turn off all notifications</string>
    <string name="block_the_user">Block the user</string>
    <string name="export_conversation_to_txt">Export conversation to (.txt)</string>
    <string name="todo">TODO</string>
    <string name="remove">REMOVE</string>
    <string name="remove_and_block">REMOVE AND BLOCK</string>
    <string name="change_username">Change username</string>
    <string name="new_username">New Username</string>
    <string name="change">CHANGE</string>
    <string name="forgot_password">Forgot password</string>
    <string name="next">NEXT</string>
    <string name="new_password">New Password</string>
    <string name="somedate">SomeDate</string>
    <string name="sometext">SomeText</string>
    <string name="back">BACK</string>
    <string name="b">B</string>
    <string name="groups">Groups</string>
    <string name="port_number_ex_433">Port number, ex: 433</string>
    <string name="hostname_ex_mydomain_xyz_ipv4">Hostname, ex: myDomain.xyz/IPv4</string>
    <string name="change_hostname_and_port">Change hostname and port</string>
    <string name="add_password_fingerprint_unlock">Add password/fingerprint unlock</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="get_database">Get database</string>
    <string name="deleate_account">Deleate account</string>
    <string name="about_the_app">About the app</string>
    <string name="block_all_incoming_requests">Block all incoming requests</string>
</resources>