<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">

    <!-- de dauagat inca o caseta cu serverPrivateCode -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="251dp"
        android:layout_height="360dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="261dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:textColor="@color/black"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/emailText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:textColor="@color/black"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/passwordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:autofillHints=""
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/errorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-30dp"
            android:backgroundTint="@color/black"
            android:text="@string/create_account"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/goToLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText" />

        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="33dp"
            android:clickable="true"
            android:text="@string/have_an_account_login_here"
            android:textColor="@color/coralColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccount" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="11dp"
            android:text=""
            android:textColor="@color/coralColor"
            app:layout_constraintBottom_toTopOf="@+id/createAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" /> <!-- redenumeste naibi custom button color la coral orange!-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="133dp"
        android:text="@string/amma"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>